kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-bahn-guru
  namespace: juliuste
spec:
  selector:
    matchLabels:
      app: api-bahn-guru
  replicas: 1
  template:
    metadata:
      labels:
        app: api-bahn-guru
    spec:
      containers:
      - name: api-bahn-guru
        image: <IMAGE>
        ports:
        - containerPort: 3000
