kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-bahn-guru
  namespace: juliuste
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api-bahn-guru
